Deployment/webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-app}
spec:
  selector:
    app: books-app
  ports:
    - port: 80
